fixed render error for projects

--- a/views/projects/weather.ejs
+++ b/views/projects/weather.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <%- include ../partials/head.ejs %>
+        <%- include ../partials/projectHead.ejs %>
         <title>DevNjeru - Weather</title>
-        <link rel="stylesheet" href="/stylesheets/weather.css" type="text/css" />
+        <link rel="stylesheet" href="../stylesheets/weather.css" type="text/css" />
         
     </head>
     <body>
