--- a/views/projects/webcalculator.ejs
+++ b/views/projects/webcalculator.ejs
@@ -3,9 +3,10 @@
   <head>
     
     <!--Head-->
-    <%- include ../partials/head.ejs %>
+    <%- include ../partials/projectHead.ejs %>
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" href="../stylesheets/calc.css" type="text/css" />
-    <script type="text/javascript" src="../javascripts/calc.js"></script>
     <title>JS Calculator</title>
 
   </head>
@@ -14,7 +15,7 @@
       <h1>Basic Web Calculator</h1>
 
       <div class="return">
-        <a href="/projects"><p>Return to Website</p><i class="fa fa-chevron-left"></i></a>
+        <a href="/work"><p>Return to Website</p><i class="fa fa-chevron-left"></i></a>
 
       </div>
 
@@ -95,5 +96,8 @@
     <!--Footer-->
     <%- include ../partials/footer.ejs %>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../javascripts/calc.js"></script>
   </body>
 </html>
