--- a/views/work.ejs
+++ b/views/work.ejs
@@ -45,8 +45,8 @@
             <p class="date"><%= new Date(proj.pub_date).toDateString() || null %></p>
             <div class="icons">
               <ul>
-                <li><a href="<%= proj.code_link || "#" %>" class="link"><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Proj-Github-Icon.png" alt="Github"></a></li>
-                <li><a href="<%= proj.demo_link || "#" %>" class="link"><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Proj-Link-Icon.png" alt="Demo"></a></li>
+                <li><a href="<%= proj.code_link || "#" %>" class="link" target="_blank"><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Proj-Github-Icon.png" alt="Github"></a></li>
+                <li><a href="/project<%= proj.demo_link || "#" %>" class="link" target="_blank"><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Proj-Link-Icon.png" alt="Demo"></a></li>
               </ul>
             </div>
             <p class="work-desc">This is a website showing some basic js and design skills.</p>
