--- a/views/partials/projectHead.ejs
+++ b/views/partials/projectHead.ejs
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 <!-- Stylesheets -->
-<link rel="stylesheet" href="/stylesheets/style.css">
+<link rel="stylesheet" href="../stylesheets/style.css">
 
 
 <title><% Title %> | Trevv's Site v0.2</title>
