--- a/views/projects/webclock.ejs
+++ b/views/projects/webclock.ejs
@@ -2,13 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <!--Head-->
-    <%- include ../partials/head.ejs %>
-    
+    <%- include ../partials/projectHead.ejs %>
     <link rel="stylesheet" href="../stylesheets/clock.css" type="text/css" />
-    <script type="text/javascript" src="../javascripts/clock.js"></script>
-    
     <title>JS Clock</title>
-
 
   </head>
   <body>
@@ -16,7 +12,7 @@
       <h3>JS Clock</h3>
       
       <div id="return">
-        <a href="/projects"><p>Return to Website</p><i class="fa fa-chevron-left"></i></a>
+        <a href="/work"><p>Return to Website</p><i class="fa fa-chevron-left"></i></a>
 
       </div>
 
@@ -37,6 +33,8 @@
     
     <!--Footer-->
     <%- include ../partials/footer.ejs %>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../javascripts/clock.js"></script>
   </body>
 </html>
