--- a/views/projects/weather.ejs
+++ b/views/projects/weather.ejs
@@ -73,12 +73,10 @@
                 
             </div>
         </main>
-        
-        
-        
-        
+
         <%- include ../partials/footer.ejs %>
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
         <script type="text/javascript" src="/javascripts/weather.js"></script>
     </body>
 </html>
